--- a/Domination/honours-project-report/report.tex
+++ b/Domination/honours-project-report/report.tex
@@ -74,18 +74,13 @@ Reference - difference between academic and game A.I [AI and computer games]
 
 \subsection{Computer Graphics previously getting more attention}
 
-Companies in video games industry tirelessly look for an edge over their competition. This edge has typically come from computer graphics, effects such as dynamic rendering, the move from two dimensional to three dimensional have kept their customers 
-
-It was often the biggest selling point
-It was what users would see first whereas the AI worked in the background. [REFERENCE to AI in computer games]
-
-The video games industry currently spends more of their time and resources in the development of graphics above that of the performance of it's game A.I. 
+Companies in video games industry tirelessly look for an edge over their competition. This edge has typically come from computer graphics, effects such as dynamic rendering, the move from two dimensional to three dimensional to keep their customers interest. 
 
 \section{AI getting more attention now}
 
 What is emerging is the idea that as users become accustomed to high quality graphics, developers will need something new to give their product an edge over their competitors. That edge will hopefully be better quality game A.I.
 
-Mention notable AI's like F.E.A.R.
+Mention notable A.I's like F.E.A.R.
 
 With this shift in focus, there is a greater incentive for the continued development of more sophisticated game A.I. likely with techniques developed in academia. The application of plan recognition algorithms may provide such an opportunity. 
 
@@ -144,6 +139,8 @@ To show plan recognition algorithms can be used successfully to predict an agent
 
 To provide insight into the complexities of creating a plan recognition mode for the RISK environment.
 
+To build a plan recognition agent that has an accuracy better than randomly picking a mission card.
+
 To provide insight into the nature of making plans in RISK. 
 
 \section{Hypothesis}
@@ -152,10 +149,11 @@ What do you want to answer?
 
 Are plan recognition algorithms beneficial in games? Specifically RISK?
 
+If the probability of a mission card is the highest among all the other mission cards of an agent, then it will be the correct mission card.
+
+The predictions of the winners will be better than that of lowers.
 
 Why because they are an artificially derived benefit which can be used by a player to optimize their behaviour, not solely , but in conjunction with the results of a plan recognition system.
-
-NOT COMPLETE
 
 Using more data from risk environment in the computation of the likelihood of explanations, the better the prediction accuracy will be.
 
@@ -203,7 +201,7 @@ We can introduce common concepts, assumptions and the process of plan recognitio
 
 Person A is cooking a meal for Person B, in other words A has a single \textit{root goal} (a state they wish to reach), such as cooked beef hamburgers. This root goal can be decomposed into a number \textit{sub goals} of such as cook meat patties or \textit{actions} such as make meat patties  which can be further decomposed into single actions
 
- A wanting to surprise B, will not tell B what his root goal is. B cannot know what A is thinking but B must then somehow infer what A's root goal is likely to be by \textit{observing} A cook in this way A's behaviour can be modelled as a Hidden Markov Model. Person B then models A's plan as follows. 
+A wanting to surprise B, will not tell B what his root goal is. B cannot know what A is thinking but B must then somehow infer what A's root goal is likely to be by \textit{observing} A cook in this way A's behaviour can be modelled as a Hidden Markov Model. Person B then models A's plan as follows. 
 
 Person B assumes A is a rational person, and that A has a \textit{plan} to achieve this root goal. Whatever A's root goal is, it can likely be decomposed into \textit{sub goals} such as cook hamburger meat. These sub goals can then be broken down into basic \textit{actions} to achieve those sub goals, such as take hamburger meat out of packet. An important point to note is that these basic actions are not limited to only being part of a sub goal.
 
@@ -419,19 +417,19 @@ In summary, plan execution according to PHATT was modelled as the following proc
 
 Following their new model of plan execution Geib and Goldman proposed an algorithm utilizing a Bayesian approach to perform probabilistic plan recognition. It computed \textit{Pr(g}|\textit{obs)}, the conditional probability of a goal \textit{g} given a set of observations \textit{obs} by computing \textit{Pr(exp}|\textit{obs)}, the conditional probability of a particular explanation \textit{exp} of the likelihood of an agent having that root goal, given a set of observations \textit{obs}.
 
-Using to Bayes Rule they defined \textit{Pr(exp}|\textit{obs)} as:\newline
+Using Bayes Rule they defined \textit{Pr(exp}|\textit{obs)} as:\newline
 
 \centerline{
 \textit{Pr(exp}|\textit{obs)} = \textit{Pr(exp} $\wedge$ \textit{obs)} / \textit{Pr(obs)}
 }
 
-They then (as other practical Bayesian systems do) exploited the equivalent formulation:\newline
+They then (as other practical Bayesian systems do) exploited the equivalent formulae\newline
 
 \centerline{
 \textit{Pr($exp_0$}|\textit{obs)} = \textit{Pr($exp_0$} $\wedge$ \textit{obs)} / $\displaystyle\sum\nolimits_{i}$ \textit{Pr($exp_i$} $\wedge$ \textit{obs)}
 }
 
-This they described as the conditinal probability of the specific explanation $exp_0$ being computed by dividing the probability of that explanation and the observations by the sum of the probability mass associated with al of the possible explanations.
+This they described as the conditional probability of the specific explanation $exp_0$ being computed by dividing the probability of that explanation and the observations by the sum of the probability mass associated with al of the possible explanations.
 
 For an exact specification of PHATT and its probability model please refer to [ref].
 
@@ -441,14 +439,14 @@ To go on to compute \textit{Pr(exp} $\wedge$ \textit{obs)} according to Geib and
 
 \begin{itemize}
 \item
-The prior probabilities of root goals.
+The probability of the root goal.
 \item
-Each sub goal probability.
+The probability of choosing each sub goal.
 \item
-The probabilities of picking each action from the pending sets.\newline
+The probability of picking an action from the pending set.\newline
 \end{itemize}
 
-Each of these features are multipled together in the following manner:\newline
+Each of these features are multiplied together in the following manner:\newline
 
 \centerline{
 \textit{Pr(exp} $\wedge$ \textit{obs)} = \textit{P}(\textit{goals})\textit{P}(\textit{plans}|\textit{goals})\textit{P}(\textit{obs}|\textit{exp})
@@ -460,9 +458,9 @@ For a full specification of how to compute an explanation probability please ref
 
 With an idea of the operation of PHATT now in mind it is now necessary to design PHATT to operate in RISK.
 
-\subsection{Environment Modelling and Data Structure Design}
+\subsection{Environment Modelling}
 
-For PHATT to operate in RISK,  modelling of the environment and a design of data structures was necessary. This process began with the identification of the root goals, sub goals and significant actions in the RISK environment as these would constitute the three probabilistic features necessary by PHATT.
+For PHATT to operate in RISK, modelling of the RISK environment is necessary. This process began with the identification of the root goals, sub goals and actions in the RISK environment as these would constitute the three probabilistic features necessary by PHATT.
 
 \subsubsection{Root Goals}
 
@@ -490,44 +488,96 @@ Eliminate a player.
 \newline
 \end{itemize}
 
-There are thus four types of mission cards.
-
-\begin{table}[ht]
-\centering
-\begin{tabular}{|c|c|}
-\hline 
-\textbf{Mission Card Type} & \textbf{Number of Bonus Armies} \\ 
-\hline 
-Occupy Continents & 7 \\ 
-\hline 
-Occupy Territories & 5 \\ 
-\hline 
-E & 5 \\ 
-\hline 
-Africa & 3 \\
-\hline
-Australia & 2 \\
-\hline  
-South America & 2 \\
-\hline 
-\end{tabular}
-\caption{Occupied Continent Army Reinforcement Bonus}
-\label{table:continent-bonus}
-\end{table}
-
-\textit{Occupy} mission cards  
-
 The above list all the mission cards from the RISK environment, due to the modelling choices which will be presented later, a subset where the mission involved conquering continents were focused on as due to the high level of overlap other missions which would likely hamper predictions.
 
 As mission cards are handed out to players' at random, the prior probability of each root goal is 1/\textit{N} where \textit{N} is the number of mission cards.
 
 \subsubsection{Sub Goals}
 
-For root goals that involve occupying atleast two continents it follows by definition that the sub goals of that root goal is occupying each continent. Two root goals allow an option to occupy a continent of choice provided they also occupy two particular continents. These two types of root goals therefore make the occupation of any single continent part of atleast one mission card.  
+For root goals that involve occupying atleast two continents it follows by definition that the sub goals of that root goal is occupying each continent. Two root goals allow an option to occupy a continent of choice provided they also occupy two particular continents. These two types of root goals therefore make the occupation of any single continent part of atleast one mission card.
 
-\subsubsection{Environment Explanations}
+\subsubsection{Actions}
 
-Given the list of root goals and sub goals, the list of explanations are therefore:
+In RISK the key actions players perform are:
+
+\begin{itemize}
+\item
+Attacking a Territory.
+\item
+Defending a Territory.
+\item
+Occupying a Territory.
+\item
+Losing a Territory.
+\item
+Reinforcing a Territory.
+\item
+Moving armies into a Territory.
+\newline
+\end{itemize}
+
+Each of these must be modelled in a manner that contributes towards explanations of the players behaviour.
+
+\textbf{Attacking and Defending}
+
+The actions of attacking and defending a territory only ever occur together and so given the outcomes of a battle, the actions of attacking and defending can be modelled as consistent or inconsistent towards achieving a root goal as follows:
+
+SuccessfulAttack - the best indication of a player intention
+
+FailedAttack - is a clear message of the intention of a player to occupy that territory and therefore should be considered a consistent action though given a less weight than that of a successful attack due to the nature of success and failure.
+
+SuccessfulDefence - another good indication of 
+
+FailedDefence - inconsistent because a player would successfully defend 
+
+\textbf{Fortify}
+
+To \textit{fortify} a territory is the act of placing an army in a territory. The fortify actions that a particular player $p$ can perform at any turn $t$ is based solely on the territories that $p$ owns during turn $t$. The pending set of any player for the fortify actions is therefore modelled as follows. 
+
+For each territory $T$ that $p$ owns at a certain turn $t$. In $p$'s pending set is an action to fortify $T$. If a territory $T_{new}$ is lost by $P$ (it is attacked and then occupied by another player), its corresponding fortify action is removed from the players pending set for turn $t+1$. Conversely if another territory $T_{other}$ is gained by $P$ then a fortify action for $T_{other}$ is added to the players pending set at turn $t+1$.\newline
+
+\textbf{Movement}
+
+Initially the movement model was based on the attack model where the smaller the number of actions the bigger the weighting should be, this is an incorrect model as the number of territories a player owns increases as a player gains more consistent movement and reinforce actions as they continue to be successful in their goal.
+
+The new model worked in such a way:
+
+Probability model changed to proportion of consistent actions * 0.1 
+0.9 - proportion for consistent probability
+1 - proportion for inconsistent probability
+
+Due to time constraints did not use it. Why?
+
+Movement is the action of moving armies from one territory to another adjacent territory.
+
+Pending set for move is neighbouring countries where a player has more than one army.
+
+From an analysis of the environment model, it allowed for a formal definition of its various data structures
+
+Capturing effectively the impact of movement of armies to a Territory 
+A list of available attack actions are created for each player and based on what they do a probability is calculated.\newline
+
+\subsubsection{Explanations}
+
+An explanation must be designed to contain all the necessary data required to compute its probability.
+
+It therefore must contain these features:
+
+A name
+A list of root goals
+A list of method choices
+A list of consistent actions
+A list of inconsistent actions
+
+One may ask that why store inconsistent actions, the model, some actions are not defence actions of a territory that is not in the mission is not inconsistent but would be if we where to use a blank if not consistent then inconsistent AND why include inconsistent actions because there is less overhead than having to search through an entire list of actions
+
+RG is the root goal
+MC is method choice
+CA is consistent action
+
+Explanation data structure is $E$ = \{ explanationName, RL, ML, CA \}
+
+Given the list of root goals and sub goals, the full list of explanations that will be considered are:
 
 \begin{itemize}
 \item
@@ -559,76 +609,6 @@ Occupy Asia and Africa.
 
 Each of these are considered as possible explanations of a players behaviour.
 
-\subsubsection{Actions}
-
-In RISK the key actions players perform are:
-
-\begin{itemize}
-\item
-Attacking a Territory.
-\item
-Defending a Territory.
-\item
-Occupying a Territory.
-\item
-Losing a Territory.
-\item
-Reinforcing a Territory.
-\item
-Moving armies into a Territory.
-\newline
-\end{itemize}
-
-Each of these must be modelled in a manner that contributes towards explanations of the players behaviour.
-
-\textbf{Attacking and Defending}
-
-The actions of attacking and defending only ever occur together and so given the outcomes of a battle in the attack phase that have been previously defined, the actions of attacking and defending can be modelled as consistent or inconsistent towards achieving a root goal as follows.
-
-\begin{table}[ht]
-\centering
-\begin{tabular}{|c|c|}
-\hline 
-\textbf{Action} & \textbf{Consistent} \\ 
-\hline 
-SucessfulAttack & Yes \\ 
-\hline 
-FailedAttack & Yes \\ 
-\hline 
-SucessfulDefence & Yes \\ 
-\hline 
-FailedDefence & No \\ 
-\hline 
-\end{tabular}
-\caption{Attack and Defence Actions}
-\label{table:attack-def-actions}
-\end{table}
-
-FailedAttack is a clear message of the intention of a player to occupy that territory and therefore should be considered a consistent action though given a less weight than that of a successful attack due to the nature of success and failure.
-
-\textbf{Fortifiy}
-
-To \textit{fortify} a territory is the act of placing an army in a territory. The fortify actions that a particular player $P$ can perform at any turn $t$ is based only on the territories that $P$ owns during a particular turn $t$. The pending set of any player for the fortify actions is therefore modelled as follows. 
-
-For each territory $T$ that $P$ owns at a certain turn $t$. In $P$'s pending set is an action to fortify $T$. If a territory $T_{new}$ is lost by $P$ (it is attacked and then occupied by another player), its corresponding fortify action is removed from the players pending set for turn $t+1$. Conversely if another territory $T_{other}$ is gained by $P$ then a fortify action for $T_{other}$ is added to the players pending set at turn $t+1$.\newline
-
-\textbf{Movement}
-
-Initially my movement model was based on the attack model where the smaller the number of actions the bigger the weighting should be, but this was changed as a player gains more consistent movement and reinforce actions as they continue to be successful in their goal.
-
-Probability model changed to proportion of consistent actions * 0.1 
-0.9 - proportion for consistent probability
-1 - proportion for inconsistent probability
-
-Movement is the action of moving armies from one territory to another adjacent territory.
-
-Pending set for move is neighbouring countries where a player has more than one army.
-
-From an analysis of the environment model, it allowed for a formal definition of its various data structures
-
-Capturing effectively the impact of movement of armies to a Territory 
-A list of available attack actions are created for each player and based on what they do a probability is calculated.\newline
-
 \subsubsection{Territory}
 
 As territories contribute to several different sub goals they require a model. The data structure of a territory contains a number of important items.
@@ -650,19 +630,6 @@ Each Territory is modelled as a state. Each state has a number available actions
 Each continent C contain several territories T. Therefore the data structure is a tuple of the name of the continent and the set of territories that are contained in that continent.
 
 C = {continentName, <T1... Tn>}
-
-\subsubsection{Explanation}
-
-An explanation should be designed to contain all the necessary data required to compute its probability.
-
-It therefore must have
-
-A name
-A list of root goals
-A list of method choices
-A list of consistent actions
-
-Explanation data structure is $E$ = \{ explanationName, RL, ML, CA \}
 
 \subsubsection{Player}
 
@@ -811,10 +778,6 @@ Use example written up before.
 
 \subsection{Conceptual Issues}
 
-Capturing Environment Model
-
-Through the modelling process the realization that the data structures I was  could use mirrored those that had already been defined by the developers of the open source game.
-
 Narrowing large search space
 Initially the model was based on the plan library proposed in the PHATT paper. This was not good therefore utilized the constraints of countries to narrow the number of possible explanations and actions?
 
@@ -882,6 +845,10 @@ The reason for this choice was the simplicity of its implementation at the time.
 (Diagram of data structure of local copy)
 
 Adding data to this hard coded data structure proved to be overly time consuming and therefore was changed to an automated system of the generation of a data structure allowing the plan recognition agent to work on any RISK map that could be successfully played in the open source game.
+
+Through the modelling process the realization that I could utilize the data structures of the developer rather than storing a copy within the plan recognition agent advantage is less overhead, disadvantage is that this makes the agent more dependant on the methods of the developers implementations.
+
+ was could use mirrored those that had already been defined by the developers of the open source game.
 
 \subsection{System Architecture Concepts}
 
